Back/work/log/fromFrontX
tarF=67_pre
subId=67
tarF=66_pre
subId=66
tarF=68_pre
subId=68
tarF=69_pre
subId=69
src:1:3: error: stray ‘\303’ in program
 számok=[ parse(Int, x) for x in split(readline()) ]
   ^
src:1:4: error: stray ‘\241’ in program
 számok=[ parse(Int, x) for x in split(readline()) ]
    ^
src:2:12: error: stray ‘\303’ in program
 for x in számok
            ^
src:2:13: error: stray ‘\241’ in program
 for x in számok
             ^
src:1:1: error: ‘sz’ does not name a type
 számok=[ parse(Int, x) for x in split(readline()) ]
 ^~
tarF=70_pre
subId=70
tarF=71_pre
subId=71
tarF=72_pre
subId=72
src:1:3: error: stray ‘\303’ in program
 számok=[ parse(Int, x) for x in split(readline()) ]
   ^
src:1:4: error: stray ‘\241’ in program
 számok=[ parse(Int, x) for x in split(readline()) ]
    ^
src:2:12: error: stray ‘\303’ in program
 for x in számok
            ^
src:2:13: error: stray ‘\241’ in program
 for x in számok
             ^
src:1:1: error: ‘sz’ does not name a type
 számok=[ parse(Int, x) for x in split(readline()) ]
 ^~
